recipes/300-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: recipes
  namespace: recipes

spec:
  ports:
    - protocol: TCP
      name: recipes
      port: 80
  selector:
    app: recipes
