recipes/500-ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipes
  namespace: recipes
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: ${RECIPES_FQDN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: recipes
            port:
              number: 80
  tls:
    - secretName: recipes-tls
      hosts:
        - ${RECIPES_FQDN}
